--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -388,6 +388,19 @@
   url       = {http://arxiv.org/abs/cond-mat/0202174},
 }
 
+@Article{Albert1999,
+  author    = {Albert, R. and Jeong, H. and Barabási, A. L.},
+  title     = {Internet: Diameter of the World-Wide Web},
+  journal   = {Nature},
+  year      = {1999},
+  volume    = {401},
+  number    = {6749},
+  pages     = {130-131},
+  doi       = {10.1038/43601},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Albert2000b,
   author    = {Albert, R. and Jeong, H. and Barabási, A.-L.},
   title     = {Error and attack tolerance of complex networks},
@@ -1092,6 +1105,15 @@
   url       = {https://utpress.utexas.edu/books/bakess},
 }
 
+@Book{Bal2009,
+  title     = {Narratology: Introduction to the Theory of Narrative},
+  publisher = {University of Toronto Press},
+  year      = {2009},
+  author    = {Bal, M. and Boheemen, C. V.},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @InProceedings{Balahur2009,
   author    = {Balahur, A. and Steinberger, R. and van der Goot, E. and Pouliquen, B. and Kabadjov, M.},
   title     = {Opinion Mining on Newspaper Quotations},
@@ -1292,6 +1314,19 @@
   doi       = {10.1016/S0378-4371(00)00018-2},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Barabasi2000a,
+  author    = {Adamic, Lada A. and Huberman, Bernardo A. and Barabási, A.-L. and Albert, R. and Jeong, H. and Bianconi, G.},
+  title     = {Power-law distribution of the World Wide Web},
+  journal   = {Science},
+  year      = {2000},
+  volume    = {287},
+  pages     = {2115},
+  doi       = {10.1126/science.287.5461.2115a},
+  groups    = {Topology App},
+  owner     = {Vincent},
+  timestamp = {2010.12.21},
 }
 
 @Article{Barabasi2002,
@@ -2255,6 +2290,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://www.jstor.org/stable/4133949},
+}
+
+@Article{Borgatti2003a,
+  author    = {Borgatti, S. P. and Foster, P. C.},
+  title     = {The Network Paradigm in Organizational Research: A Review and Typology},
+  journal   = {Journal of Management},
+  year      = {2003},
+  volume    = {29},
+  number    = {6},
+  pages     = {991-1013},
+  doi       = {10.1016/s0149-2063_03_00087-4},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @Article{Borgatti2005,
@@ -3706,6 +3754,19 @@
   timestamp = {2019.03.27},
 }
 
+@Article{CHOI2006,
+  author    = {Choi, J. H. and Barnett, G. A. and Chon, B.-S.},
+  title     = {Comparing world city networks: a network analysis of Internet backbone and air transport intercity linkages},
+  journal   = {Global Networks},
+  year      = {2006},
+  volume    = {6},
+  number    = {1},
+  pages     = {81-99},
+  doi       = {10.1111/j.1471-0374.2006.00134.x},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @Article{Choi2007,
   author    = {Choi, Y.-M. and Kim, H.-J.},
   title     = {A directed network of greek and roman mythology},
@@ -4944,6 +5005,19 @@
   owner     = {Vincent},
   timestamp = {2019.03.25},
   url       = {http://www.lrec-conf.org/proceedings/lrec2004/pdf/5.pdf},
+}
+
+@Article{Dodds2015,
+  author    = {Dodds, P. S. and Clark, E. M. and Desu, S. and Frank, M. R. and Reagan, A. J. and Williams, J. R. and Mitchell, L. and Harris, K. D. and Kloumann, I. M. and Bagrow, J. P. and Megerdoomian, K. and McMahon, M. T. and Tivnan, B. F. and Danforth, C. M.},
+  title     = {Human language reveals a universal positivity bias},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2015},
+  volume    = {112},
+  number    = {8},
+  pages     = {2389-2394},
+  doi       = {10.1073/pnas.1411678112},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @InCollection{Does2017,
@@ -6307,6 +6381,15 @@
   timestamp = {2016.01.05},
 }
 
+@Book{Freytag1896,
+  title     = {Freytag's Technique of the Drama: An Exposition of Dramatic Composition and Art},
+  publisher = {Scholarly Press},
+  year      = {1896},
+  author    = {Freytag, G.},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @InProceedings{Friedland2009,
   author    = {Friedland, G. and Gottlieb, L. and Janin, A.},
   title     = {Using Artistic Markers and Speaker Identification for Narrative-Theme Navigation of Seinfeld Episodes},
@@ -6968,6 +7051,16 @@
   timestamp = {2019.03.27},
 }
 
+@InProceedings{Gonalves2013,
+  author    = {Gonçalves, P. and Araújo, M. and Benevenuto, F. and Cha, M.},
+  title     = {Comparing and combining sentiment analysis methods},
+  booktitle = {1st ACM conference on Online social networks},
+  year      = {2013},
+  doi       = {10.1145/2512938.2512951},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @Article{Gonalves2015,
   author    = {Gonçalves, W. N. and Brandoli Machado, B. and Martinez Bruno, O.},
   title     = {A complex network approach for dynamic texture recognition},
@@ -7113,6 +7206,17 @@
   timestamp = {2017.04.27},
 }
 
+@InProceedings{Grayson2016a,
+  author    = {Grayson, S. and Wade, K. and Meaney, G. and Rothwell, J. and Mulvany, M. and Greene, D.},
+  title     = {Discovering structure in social networks of 19th century fiction},
+  booktitle = {8th ACM Conference on Web Science},
+  year      = {2016},
+  pages     = {325-326},
+  doi       = {10.1145/2908131.2908196},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @Book{Green1992,
   title     = {Dictionary of Celtic Myth and Legend},
   publisher = {Thames and Hudson},
@@ -7169,6 +7273,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://dl.acm.org/citation.cfm?id=2976456.2976521},
+}
+
+@Article{Grimm2005,
+  author    = {Grimm, V. and Revilla, E. and Berger, U. and Jeltsch, F. and Mooij, W. M. and Railsback, S. F. and Thulke, H.-H. and Weiner, J. and Wiegand, T. and DeAngelis, D. L.},
+  title     = {Pattern-Oriented Modeling of Agent-Based Complex Systems: Lessons from Ecology},
+  journal   = {Science},
+  year      = {2005},
+  volume    = {310},
+  number    = {5750},
+  pages     = {987-991},
+  doi       = {10.1126/science.1116681},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @InProceedings{Grishman2005,
@@ -7455,6 +7572,15 @@
   owner     = {Vincent},
   timestamp = {2019.04.01},
   url       = {https://www.rug.nl/news/2008/01/01_05?lang=en},
+}
+
+@Book{Han2011,
+  title     = {Data Mining: Concepts and Techniques},
+  publisher = {Elsevier},
+  year      = {2011},
+  author    = {Han, J. and Kamber, M. and Pei, J.},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @Article{Hanjalic1999,
@@ -8222,6 +8348,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Article{Hume2012,
+  author    = {Hume, R. D.},
+  title     = {Money in Jane Austen},
+  journal   = {The Review of English Studies},
+  year      = {2012},
+  volume    = {64},
+  number    = {264},
+  pages     = {289-310},
+  doi       = {10.1093/res/hgs054},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @Article{Hummon2003,
   author    = {Hummon, N. P. and Doreian, P.},
   title     = {Some dynamics of social balance processes: bringing Heider back into balance theory},
@@ -8533,6 +8672,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@Article{Jeong2000,
+  author    = {Jeong, H. and Tombor, B. and Albert, R. and Oltvai, Z. and Barabási, A.-L.},
+  title     = {The large-scale organization of metabolic networks},
+  journal   = {Nature},
+  year      = {2000},
+  volume    = {407},
+  pages     = {651-655},
+  doi       = {10.1038/35036627},
+  owner     = {Vincent},
+  timestamp = {2010.12.21},
+}
+
 @Book{Jewkes1958,
   title     = {Act Division in Elizabethan and Jacobean Plays, 1583-1616},
   publisher = {Shoe String Press},
@@ -8606,6 +8757,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.28},
   url       = {https://www.jstor.org/stable/10.5406/j.ctt2jcc3m},
+}
+
+@Article{Jockers2013a,
+  author    = {Jockers, M. L. and Mimno, D.},
+  title     = {Significant themes in 19th-century literature},
+  journal   = {Poetics},
+  year      = {2013},
+  volume    = {41},
+  number    = {6},
+  pages     = {750-769},
+  doi       = {10.1016/j.poetic.2013.08.005},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @InCollection{Johnson1994,
@@ -8786,6 +8950,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@Article{Jung2016a,
+  author    = {Jung, J. E. and Hong, M. and Nguyen, H. L.},
+  title     = {Serendipity-based storification: from lifelogging to storytelling},
+  journal   = {Multimedia Tools and Applications},
+  year      = {2016},
+  volume    = {76},
+  number    = {8},
+  pages     = {10345-10356},
+  doi       = {10.1007/s11042-016-3682-x},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @Article{JunSeongKim2014,
   author    = {Kim, J.-S. and Sim, J.-Y. and Kim, C.-S.},
   title     = {Multiscale Saliency Detection Using Random Walk With Restart},
@@ -8823,6 +9000,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/llc/fqm042},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@InProceedings{Jurgens2010,
+  author    = {Jurgens, D. and Stevens, K.},
+  title     = {The S-Space package: an open source package for word space models},
+  booktitle = {ACL System Demonstrations},
+  year      = {2010},
+  pages     = {30-35},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+  url       = {https://dl.acm.org/citation.cfm?id=1858939},
 }
 
 @Article{Jurman2011,
@@ -9140,6 +9328,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4490/algae.2011.26.1.001},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Kim2014,
+  author    = {Kim, D. and Son, S.-W. and Jeong, H.},
+  title     = {Large-Scale Quantitative Analysis of Painting Arts},
+  journal   = {Scientific Reports},
+  year      = {2014},
+  volume    = {4},
+  number    = {1},
+  doi       = {10.1038/srep07370},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @Book{Kinsella1969,
@@ -10030,6 +10230,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {LeDoux, J. E. and Barrett, L. F. and Russell, J. A.},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Lee1999,
+  author    = {Lee, D. D. and Seung, H. S.},
+  title     = {Learning the parts of objects by non-negative matrix factorization},
+  journal   = {Nature},
+  year      = {1999},
+  volume    = {401},
+  number    = {6755},
+  pages     = {788-791},
+  doi       = {10.1038/44565},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
+@InProceedings{Lee2000,
+  author    = {Lee, D. D. and Seung, H. S.},
+  title     = {Algorithms for Non-negative Matrix Factorization},
+  booktitle = {13th International Conference on Neural Information Processing Systems},
+  year      = {2000},
+  pages     = {535-541},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+  url       = {https://dl.acm.org/citation.cfm?id=3008829},
 }
 
 @Article{Lee2001,
@@ -11328,6 +11552,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclweb.org/anthology/papers/L/L06/L06-1260/},
 }
 
+@Article{Marsden1990,
+  author    = {Marsden, P. V.},
+  title     = {Network Data and Measurement},
+  journal   = {Annual Review of Sociology},
+  year      = {1990},
+  volume    = {16},
+  number    = {1},
+  pages     = {435-463},
+  doi       = {10.1146/annurev.so.16.080190.002251},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @InProceedings{Martinez-Ortiz2015,
   author    = {Martinez-Ortiz, C. and Koolen, M. and Buschenhenke, F. and van Dalen-Oskam, K.},
   title     = {Beyond the Book: Linking Books to Wikipedia},
@@ -11698,6 +11935,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1858839},
 }
 
+@Book{McKee1997,
+  title     = {Substance, Structure, Style, and the Principles of Screenwriting},
+  publisher = {Harper Collins},
+  year      = {1997},
+  author    = {McKee, R.},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @Electronic{McNary2019,
   author       = {McNary, D.},
   month        = {01},
@@ -11866,6 +12112,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://dl.acm.org/citation.cfm?id=2999959},
+}
+
+@Article{Mikolov2013a,
+  author    = {Mikolov, T. and Chen, K. and Corrado, G. and Dean, J.},
+  title     = {Efficient Estimation of Word Representations in Vector Space},
+  journal   = {arXiv},
+  year      = {2013},
+  volume    = {cs.CL},
+  pages     = {1301.3781},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+  url       = {https://arxiv.org/abs/1301.3781},
 }
 
 @Article{Milgram1967,
@@ -13890,6 +14148,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.jcomputers.us/vol8/jcp0809-38.pdf},
 }
 
+@Article{Park2015,
+  author    = {Park, D. and Bae, A. and Schich, M. and Park, J.},
+  title     = {Topology and evolution of the network of western classical music composers},
+  journal   = {EPJ Data Science},
+  year      = {2015},
+  volume    = {4},
+  number    = {1},
+  doi       = {10.1140/epjds/s13688-015-0039-z},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @Book{Parker1987,
   title     = {Literary Fat Ladies: Rhetoric, Gender, Property},
   publisher = {Methuen},
@@ -13988,6 +14258,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.29},
   url       = {https://dl.acm.org/citation.cfm?id=1944679},
+}
+
+@Book{Pennebaker2001,
+  title     = {Linguistic Inquiry and Word Count},
+  publisher = {Lawrence Erlbaum Associates},
+  year      = {2001},
+  author    = {Pennebaker, J. W. and Francis, M. E. and Booth, R. J.},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @InProceedings{Pennington2014,
@@ -14721,6 +15000,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.09.14},
 }
 
+@InProceedings{Rder2015,
+  author    = {Röder, M. and Both, A. and Hinneburg, A.},
+  title     = {Exploring the Space of Topic Coherence Measures},
+  booktitle = {8th ACM International Conference on Web Search and Data Mining},
+  year      = {2015},
+  doi       = {10.1145/2684822.2685324},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @Article{Reagan2016,
   author        = {Reagan, A. J. and Mitchell, L. and Kiley, D. and Danforth, C. M. and Sheridan Dodds, P.},
   title         = {The emotional arcs of stories are dominated by six basic shapes},
@@ -15106,6 +15395,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {1044-1049},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@Book{Rimmon-Kenan2003,
+  title     = {Narrative Fiction: Contemporary Poetics},
+  publisher = {Routledge},
+  year      = {2003},
+  author    = {Rimmon-Kenan, S.},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @Electronic{Rinehart2017,
@@ -15858,6 +16156,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-540-72079-9_9},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Schich2014,
+  author    = {Schich, M. and Song, C. and Ahn, Y.-Y. and Mirsky, A. and Martino, M. and Barabasi, A.-L. and Helbing, D.},
+  title     = {A network framework of cultural history},
+  journal   = {Science},
+  year      = {2014},
+  volume    = {345},
+  number    = {6196},
+  pages     = {558-562},
+  doi       = {10.1126/science.1240064},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @Article{Schmader2015,
@@ -16760,6 +17071,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.22},
 }
 
+@InProceedings{Stevens2012,
+  author    = {Stevens, K. and Kegelmeyer, P. and Andrzejewski, D. and Buttler, D.},
+  title     = {Exploring topic coherence over many models and many topics},
+  booktitle = {Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+  year      = {2012},
+  pages     = {952-961},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+  url       = {https://dl.acm.org/citation.cfm?id=2391052},
+}
+
 @Article{Stiller2003,
   author    = {Stiller, J. and Nettle, D. and Dunbar, R. I. M.},
   title     = {The small world of {Shakespeare}'s plays},
@@ -17284,6 +17606,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@Article{Tausczik2009,
+  author    = {Tausczik, Y. R. and Pennebaker, J. W.},
+  title     = {The Psychological Meaning of Words: {LIWC} and Computerized Text Analysis Methods},
+  journal   = {Journal of Language and Social Psychology},
+  year      = {2009},
+  volume    = {29},
+  number    = {1},
+  pages     = {24-54},
+  doi       = {10.1177/0261927x09351676},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @InCollection{Taylor1993,
   author    = {Taylor, G. and Jowett, J.},
   title     = {The Structure of Performance: Act-intervals in the London Theatres, 1576-1642},
@@ -17483,6 +17818,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/1073445.1073478},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Traag2015,
+  author    = {Traag, V. A. and Reinanda, R. and van Klinken, G.},
+  title     = {Elite Co-Occurrence in the Media},
+  journal   = {Asian Journal of Social Science},
+  year      = {2015},
+  volume    = {43},
+  number    = {5},
+  pages     = {588-612},
+  doi       = {10.1163/15685314-04305005},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @Article{Trabasso1985,
@@ -17917,6 +18265,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://pdfs.semanticscholar.org/b755/1e222321cca2fdb1992991c434ef0aa1a2fd.pdf},
 }
 
+@InProceedings{VandeCruys2011,
+  author    = {Van de Cruys, T. and Apidianaki, M.},
+  title     = {Latent semantic word sense induction and disambiguation},
+  booktitle = {49th Annual Meeting of the ACL: Human Language Technologies},
+  year      = {2011},
+  pages     = {1476-1485},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+  url       = {https://dl.acm.org/citation.cfm?id=2002652},
+}
+
 @Article{vandeWijngaert2012,
   author    = {van de Wijngaert, L. and Bouwman, H. and Contractor, N.},
   title     = {A network approach toward literature review},
@@ -18119,6 +18478,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Propp, V. I. A.},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Book{Vogler2007,
+  title     = {The Writer's Journey},
+  publisher = {Michael Wiese Productions},
+  year      = {2007},
+  author    = {Vogler, C.},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @InProceedings{Volkova2010,
@@ -19009,6 +19377,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.30},
 }
 
+@InProceedings{Xu2003,
+  author    = {Xu, W. and Liu, X. and Gong, Y.},
+  title     = {Document clustering based on non-negative matrix factorization},
+  booktitle = {26th annual international ACM SIGIR conference on Research and development in informaion retrieval},
+  year      = {2003},
+  doi       = {10.1145/860435.860485},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+}
+
 @InProceedings{Xu2007,
   author    = {Xu, D. and Chang, S.-F.},
   title     = {Visual event recognition in news video using kernel methods with multi-level temporal alignment},
@@ -19384,6 +19762,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@InProceedings{Zadeh2014,
+  author    = {Zadeh, B. Q. and Handschuh, S.},
+  title     = {Evaluation of technology term recognition with random indexing},
+  booktitle = {9th International Conference on Language Resources and Evaluation},
+  year      = {2014},
+  pages     = {4027-4032},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
+  url       = {https://aran.library.nuigalway.ie/xmlui/handle/10379/4381},
+}
+
 @Article{Zajonc1968,
   author    = {Zajonc, R. B.},
   title     = {Attitudinal effects of mere exposure.},
@@ -19510,6 +19899,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/954339.954342},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@Article{Zhao2004,
+  author    = {Zhao, Y. and Karypis, G.},
+  title     = {Empirical and Theoretical Comparisons of Selected Criterion Functions for Document Clustering},
+  journal   = {Machine Learning},
+  year      = {2004},
+  volume    = {55},
+  number    = {3},
+  pages     = {311-331},
+  doi       = {10.1023/b:mach.0000027785.44527.d6},
+  owner     = {Vincent},
+  timestamp = {2019.04.11},
 }
 
 @InProceedings{Zhao2005,
