--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -234,6 +234,19 @@
   timestamp = {2019.03.23},
 }
 
+@Article{Aggarwal2014,
+  author    = {Aggarwal, C. and Subbian, K.},
+  title     = {Evolutionary Network Analysis: A Survey},
+  journal   = {ACM Computing Surveys},
+  year      = {2014},
+  volume    = {47},
+  number    = {1},
+  pages     = {10},
+  doi       = {10.1145/2601412},
+  owner     = {Vincent},
+  timestamp = {2016.03.23},
+}
+
 @InProceedings{Agichtein2000,
   author    = {Agichtein, E. and Gravano, L.},
   title     = {Snowball: extracting relations from large plain-text collections},
@@ -1824,6 +1837,19 @@
   timestamp = {2016.04.03},
 }
 
+@Article{Bezerianos2010,
+  author    = {Bezerianos, A. and Chevalier, F. and Dragicevic, P. and Elmqvist, N. and Fekete, J. D.},
+  title     = {{GraphDice}: A System for Exploring Multivariate Social Networks},
+  journal   = {Computer Graphics Forum},
+  year      = {2010},
+  volume    = {29},
+  number    = {3},
+  pages     = {863-872},
+  doi       = {10.1111/j.1467-8659.2009.01687.x},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @InProceedings{Bhattacharya2005,
   author    = {Bhattacharya, I. and Getoor, L.},
   title     = {Relational clustering for multi-type entity resolution},
@@ -1846,6 +1872,18 @@
   doi       = {10.1209/0295-5075/81/28005},
   owner     = {Vincent},
   timestamp = {2012.07.30},
+}
+
+@Article{Bianconi2009,
+  author    = {Bianconi, G.},
+  title     = {Entropy of network ensembles},
+  journal   = {Physical Review E},
+  year      = {2009},
+  volume    = {79},
+  number    = {3},
+  doi       = {10.1103/physreve.79.036114},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @Book{Biber1988,
@@ -1908,6 +1946,17 @@
   doi       = {10.1146/annurev.so.12.080186.000435},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@PhdThesis{Bilinski2014,
+  author    = {Biliński , P. T.},
+  title     = {Human action recognition in videos},
+  school    = {Université de Nice-Sophia Antipolis},
+  year      = {2014},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+  url       = {https://tel.archives-ouvertes.fr/tel-01134481},
 }
 
 @InProceedings{Bingenheimer2009,
@@ -2078,6 +2127,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://www.plutobooks.com/9780745339290/theatre-of-the-oppressed/},
+}
+
+@Article{Boccaletti2006,
+  author    = {Boccaletti, S. and Latora, V. and Moreno, Y. and Chavez, M. and Hwang, D. U.},
+  title     = {Complex networks: structure and dynamics},
+  journal   = {Physics Reports},
+  year      = {2006},
+  volume    = {424},
+  number    = {4-5},
+  pages     = {175-308},
+  doi       = {10.1016/j.physrep.2005.10.009},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Article{Boguna2004,
@@ -2277,6 +2339,17 @@
   owner     = {Vincent},
   timestamp = {2018.06.28},
   url       = {https://www.mhprofessional.com/9780073535104-usa-film-art-an-introduction},
+}
+
+@Book{Borg2005,
+  title     = {Modern Multidimensional Scaling: Theory and Applications},
+  publisher = {Springer},
+  year      = {2005},
+  author    = {Borg, I. and Groenen, P. J. F.},
+  series    = {Springer Series in Statistics},
+  doi       = {10.1007/0-387-28981-x},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @Article{Borgatti2003,
@@ -2580,6 +2653,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {http://nbn-resolving.de/urn:nbn:de:bsz:352-opus-72102},
+}
+
+@Article{Brandes2001a,
+  author    = {Brandes, U.},
+  title     = {A faster algorithm for betweenness centrality},
+  journal   = {Journal of Mathematical Sociology},
+  year      = {2001},
+  volume    = {25},
+  number    = {2},
+  pages     = {163-177},
+  doi       = {10.1080/0022250X.2001.9990249},
+  owner     = {Vincent},
+  timestamp = {2012.02.02},
 }
 
 @Article{Brandes2003,
@@ -3290,6 +3376,17 @@
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://www.jstor.org/stable/10.5325/style.42.2-3.103},
+}
+
+@Article{Carstens2013,
+  author    = {Carstens, C. J. and Horadam, K. J.},
+  title     = {Persistent homology of collaboration networks},
+  journal   = {Mathematical Problems in Engineering},
+  year      = {2013},
+  pages     = {815035},
+  doi       = {10.1155/2013/815035},
+  owner     = {Vincent},
+  timestamp = {2018.06.15},
 }
 
 @Article{Cartwright1956,
@@ -4044,6 +4141,19 @@
   timestamp = {2019.04.07},
 }
 
+@Article{CohenSteiner2008,
+  author    = {Cohen-Steiner, D. and Edelsbrunner, H. and Harer, J.},
+  title     = {Extending Persistence Using Poincaré and Lefschetz Duality},
+  journal   = {Foundations of Computational Mathematics},
+  year      = {2008},
+  volume    = {9},
+  number    = {1},
+  pages     = {79-103},
+  doi       = {10.1007/s10208-008-9027-z},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @Article{Colarusso1998,
   author    = {Colarusso, J.},
   title     = {Dumézil and the Details: An Analysis of the Comparative Techniques in Linguistics and Mythology},
@@ -4053,6 +4163,15 @@
   pages     = {103-117},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Book{Coleman1961,
+  title     = {The Adolescent Society},
+  publisher = {Free Press},
+  year      = {1961},
+  author    = {Coleman, J. S.},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @InProceedings{Collins2002,
@@ -5486,6 +5605,15 @@
   url       = {https://www.vanhamel.nl/codecs/Edel_2001b11},
 }
 
+@Book{Edelsbrunner2010,
+  title     = {Computational topology: An introduction},
+  publisher = {American Mathematical Society},
+  year      = {2010},
+  author    = {Edelsbrunner, H. and Harer, J.},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @Book{Eder2010,
   title     = {Characters in Fictional Worlds: Understanding Imaginary Beings in Literature, Film, and Other Media},
   publisher = {De Gruyter},
@@ -5689,6 +5817,19 @@
   owner       = {Vincent},
   timestamp   = {2018.02.17},
   url         = {http://www.cs.columbia.edu/~delson/pubs/Modeling-Narrative-Discourse_Elson_R4.pdf},
+}
+
+@Article{Eom2014,
+  author    = {Eom, Y.-H. and Jo, H.-H.},
+  title     = {Generalized friendship paradox in complex networks: The case of scientific collaboration},
+  journal   = {Scientific Reports},
+  year      = {2014},
+  volume    = {4},
+  number    = {1},
+  pages     = {4603},
+  doi       = {10.1038/srep04603},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @InProceedings{Ercolessi2011,
@@ -6781,6 +6922,16 @@
   url       = {http://gaia.fdi.ucm.es/sites/seed13/assets/actas_seed.pdf#page=35},
 }
 
+@InProceedings{Ghannay2018,
+  author    = {Ghannay, S. and Caubriere, A. and Estève, Y. and Camelin, N. and Simonnet, E. and Laurent, A. and Morin, E.},
+  title     = {End-To-End Named Entity And Semantic Concept Extraction From Speech},
+  booktitle = {IEEE Spoken Language Technology Workshop},
+  year      = {2018},
+  doi       = {10.1109/slt.2018.8639513},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @Article{Gianluigi2006,
   author    = {Gianluigi, C. and Raimondo, S.},
   title     = {An innovative algorithm for key frame extraction in video summarization},
@@ -7834,6 +7985,16 @@
   timestamp = {2019.03.28},
 }
 
+@InProceedings{Heer2005,
+  author    = {Heer, J. and Boyd, D.},
+  title     = {Vizster: visualizing online social networks},
+  booktitle = {IEEE Symposium on Information Visualization},
+  year      = {2005},
+  doi       = {10.1109/infvis.2005.1532126},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @Article{Heider1946,
   author    = {Heider, F.},
   title     = {Attitudes and cognitive organization},
@@ -8603,6 +8764,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Jacomy2014,
+  author    = {Jacomy, M. and Venturini, T. and Heymann, S. and Bastian, M.},
+  title     = {{ForceAtlas}2, a Continuous Graph Layout Algorithm for Handy Network Visualization Designed for the Gephi Software},
+  journal   = {PLoS ONE},
+  year      = {2014},
+  volume    = {9},
+  number    = {6},
+  pages     = {e98679},
+  doi       = {10.1371/journal.pone.0098679},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
+@Article{Jaenicke2015,
+  author    = {Jänicke, S. and Franzini, G. and Cheema, M. F. and Scheuermann, G.},
+  title     = {On Close and Distant Reading in Digital Humanities: A Survey and Future Challenges},
+  journal   = {Eurographics Conference on Visualization},
+  year      = {2015},
+  doi       = {10.2312/eurovisstar.20151113},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @InProceedings{Jain2007,
   author    = {Jain, V. and Learned-Miller, E. and McCallum, A.},
   title     = {People-{LDA}: Anchoring Topics to People using Face Recognition},
@@ -9174,6 +9358,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://graphics.straitstimes.com/STI/STIMEDIA/Interactives/2018/04/marvel-cinematic-universe-whos-who-interactive/index.html},
   owner        = {Vincent},
   timestamp    = {2018.07.22},
+}
+
+@Article{Kerber2017,
+  author    = {Kerber, M. and Morozov, D. and Nigmetov, A.},
+  title     = {Geometry Helps to Compare Persistence Diagrams},
+  journal   = {Journal of Experimental Algorithmics},
+  year      = {2017},
+  volume    = {22},
+  pages     = {1-20},
+  doi       = {10.1145/3064175},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @InProceedings{Kessler1997,
@@ -10374,8 +10570,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author    = {Lee, O.-J. and Jung, J. J.},
   title     = {Modeling affective character network for story analytics},
   journal   = {Future Generation Computer Systems},
-  year      = {2018},
-  volume    = {in press},
+  year      = {2019},
+  volume    = {92},
+  pages     = {458-478},
   doi       = {10.1016/j.future.2018.01.030},
   groups    = {Character Nets},
   owner     = {Vincent},
@@ -11353,12 +11550,13 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.informatica.si/index.php/informatica/article/view/51},
 }
 
-@Article{Makris2016,
+@InProceedings{Makris2016,
   author        = {Makris, C. and Vikatos, P.},
   title         = {Community Detection of Screenplay Characters},
-  journal       = {IFIP Advances in Information and Communication Technology},
+  booktitle     = {12th IFIP International Conference on Artificial Intelligence Applications and Innovations},
   year          = {2016},
   volume        = {475},
+  series        = {IFIP Advances in Information and Communication Technology},
   pages         = {463-470},
   __markedentry = {[Vincent:]},
   doi           = {10.1007/978-3-319-44944-9_40},
@@ -11563,6 +11761,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1146/annurev.so.16.080190.002251},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Martin2014,
+  author    = {Martin, T. and Zhang, X. and Newman, M. E. J.},
+  title     = {Localization and centrality in networks},
+  journal   = {Physical Review E},
+  year      = {2014},
+  volume    = {90},
+  number    = {5},
+  pages     = {052808},
+  doi       = {10.1103/physreve.90.052808},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @InProceedings{Martinez-Ortiz2015,
@@ -14624,6 +14835,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://publications.jrc.ec.europa.eu/repository/handle/JRC37835},
 }
 
+@Article{Pow2012,
+  author    = {Pow, J. and Gayen, K. and Elliott, L. and Raeside, R.},
+  title     = {Understanding complex interactions using social network analysis},
+  journal   = {Journal of Clinical Nursing},
+  year      = {2012},
+  volume    = {21},
+  number    = {19-20},
+  pages     = {2772-2779},
+  doi       = {10.1111/j.1365-2702.2011.04036.x},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @InProceedings{Prabhakaran2012,
   author    = {Prabhakaran, V. and Rambow, O. and Diab, M.},
   title     = {Predicting overt display of power in written dialogs},
@@ -15169,6 +15393,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Character Nets},
   owner     = {Vincent},
   timestamp = {2018.06.12},
+}
+
+@Article{Rieck2016a,
+  author    = {Rieck, B. and Leitte, H.},
+  title     = {Exploring and Comparing Clusterings of Multivariate Data Sets Using Persistent Homology},
+  journal   = {Computer Graphics Forum},
+  year      = {2016},
+  volume    = {35},
+  number    = {3},
+  pages     = {81-90},
+  doi       = {10.1111/cgf.12884},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @InProceedings{Rienks2006,
@@ -16517,6 +16754,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@Article{Shneiderman2006,
+  author    = {Shneiderman, B. and Aris, A.},
+  title     = {Network Visualization by Semantic Substrates},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2006},
+  volume    = {12},
+  number    = {5},
+  pages     = {733-740},
+  doi       = {10.1109/tvcg.2006.166},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @Article{Shroff2010,
   author    = {Shroff, N. and Turaga, P. and Chellappa, R.},
   title     = {Video Précis: Highlighting Diverse Aspects of Videos},
@@ -16528,6 +16778,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tmm.2010.2058795},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Silva2011,
+  author    = {Silva, F. N. and Viana, M. P. and Travençolo, B. A. N. and da Fontoura Costa, L.},
+  title     = {Investigating relationships within and between category networks in Wikipedia},
+  journal   = {Journal of Informetrics},
+  year      = {2011},
+  volume    = {5},
+  number    = {3},
+  pages     = {431-438},
+  doi       = {10.1016/j.joi.2011.03.003},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @Article{Silva2012a,
@@ -16798,6 +17061,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.02},
   url       = {https://www.cambridge.org/core/books/two-cultures/506914BF3ADDD439EE8100FD2882D9DB},
+}
+
+@Article{Snyder1970,
+  author    = {Snyder, S.},
+  title     = {Romeo and juliet: Comedy into tragedy},
+  journal   = {Essays in Criticism},
+  year      = {1970},
+  volume    = {20},
+  number    = {4},
+  pages     = {391-402},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @Article{Soares2014,
@@ -17644,6 +17919,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.06.01},
 }
 
+@Article{Teague1986,
+  author    = {Teague, F.},
+  title     = {Othello and new comedy},
+  journal   = {Comparative Drama},
+  year      = {1986},
+  volume    = {20},
+  number    = {1},
+  pages     = {54-64},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @Article{Tehrani2013,
   author    = {Tehrani, J. J.},
   title     = {The Phylogeny of Little Red Riding Hood},
@@ -17730,6 +18017,15 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2012},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Book{Tillyard1949,
+  title     = {Shakespeare's problem plays},
+  publisher = {Chatto and Windus},
+  year      = {1949},
+  author    = {Tillyard, E. M. W.},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @InProceedings{Titov2008,
@@ -18537,6 +18833,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Article{Vrigkas2015,
+  author    = {Vrigkas, M. and Nikou, C. and Kakadiaris, I. A.},
+  title     = {A Review of Human Activity Recognition Methods},
+  journal   = {Frontiers in Robotics and AI},
+  year      = {2015},
+  volume    = {2},
+  doi       = {10.3389/frobt.2015.00028},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
+}
+
 @InProceedings{Vuillemot2009,
   author    = {Vuillemot, R. and Clement, T. and Plaisant, C. and Kumar, A.},
   title     = {What's being said near "Martha"? Exploring name entities in literary text collections},
@@ -18923,6 +19230,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.23},
   url       = {https://psycnet.apa.org/record/1997-08437-007},
+}
+
+@Article{Welsh1978,
+  author    = {Welsh, A.},
+  title     = {Opening and Closing Les Misérables},
+  journal   = {Nineteenth-Century Fiction},
+  year      = {1978},
+  volume    = {33},
+  number    = {1},
+  pages     = {8-23},
+  doi       = {10.2307/2932924},
+  owner     = {Vincent},
+  timestamp = {2019.04.12},
 }
 
 @InProceedings{Weng2007,
